force-app/main/default/objects/Mcoe_Staging__c/Mcoe_Staging__c.object-meta.xml
<CustomObject>
    <description>This object is used to store information about request and response from tooling API and also holds exception messages.</description>
    <label>Staging</label>
    <nameField>
        <displayFormat>Staging-{00000}</displayFormat>
        <label>Staging Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>