force-app/main/default/objects/Mcoe_Staging__c/fields/Mcoe_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Exception_Message__c</fullName>
    <description>This field will hold exception message from tooling API</description>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>