force-app/main/default/objects/Mcoe_Staging__c/fields/Mcoe_Request__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Request__c</fullName>
    <description>This field will hold Request JSON information</description>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>