force-app/main/default/objects/Mcoe_Staging__c/fields/Mcoe_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Request_Type__c</fullName>
    <description>This field will hold type of request for this staging record</description>
    <label>Request Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>