force-app/main/default/objects/Mcoe_Staging__c/fields/Mcoe_Response__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Response__c</fullName>
    <description>This field will hold response received from Tooling API</description>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>