force-app/main/default/objects/Mcoe_Staging__c/fields/Mcoe_SR_Number__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_SR_Number__c</fullName>
    <description>This is to store SR Number for which this record is created</description>
    <label>SR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>