force-app/main/default/objects/Mcoe_Staging__c/fields/Mcoe_Status__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Status__c</fullName>
    <description>This field will hold status details.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>