force-app/main/default/objects/Mcoe_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mcoe_SR_Number__c</columns>
    <columns>Mcoe_Request_Type__c</columns>
    <columns>Mcoe_Request__c</columns>
    <columns>Mcoe_Response__c</columns>
    <columns>Mcoe_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>